# unsloth-grpo-project

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  build_project.bat  build_simple.bat  check_main.py  direct_test.c  enhanced_viewer_true_epoch.py  fix_main.py  make.bat  pyproject.toml  requirements-dev.txt  requirements.txt  resume_final_fix.py  resume_gpu1.py  setup.py  setup_project.bat  test_compile.c  test_run.py  test_simple.c  test_system.py  verify_installation.ps1
core/: etw_monitor.py  main.py  master_router.py
core/experts/: base_expert.py
docs/: architecture.md
scripts/: download_models.py
src/: main.py
src/c_core/: __init__.py  ai_gui.py  base_expert.py  c_bridge.py  etw_monitor.py  gui_simple.py  hotkey_daemon.c  master_router.py  py_bridge.c  system_monitor.c
src/docs/: QUICKSTART.md
src/scripts/: setup_env.bat  setup_env.sh
src/training/cli_agent/: __init__.py  agent.py  environment.py  policy.py
src/training/configs/: agent_config.yaml
src/training/train/: __init__.py  grpo_trainer.py  rewards.py  train.py  training_data.py
src/training/utils/: __init__.py
tests/: test_core.py
